9.Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: test.com
      http:
         paths:
          - backend:
              serviceName: nginxservice
              servicePort: 80
